--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,12 @@ h1 {
   text-transform: uppercase;
   margin: 4rem 0;
 }
+h5 {
+  font-size: 1rem;
+  font-style: italic;
+  color: #40b48e;
+  margin-bottom: 1rem;
+}
 
 .search-form {
   width: 60rem;
@@ -102,6 +108,11 @@ h1 {
   border-radius: 0.5rem;
   box-shadow: 2rem 3rem 5rem #aaa;
 }
+.recipe:hover {
+  /* -webkit-transform: scale(1.1); */
+  transform: scale(1.1);
+  transition-duration: 0.3s;
+}
 
 .recipe h2 {
   background-color: rgba(161, 161, 161, 0.7);
@@ -124,7 +135,10 @@ h1 {
 
 .recipe a {
   font-size: 1.8rem;
-  color: #40b48e;
+  color: #2b8d6c;
+  /* padding: 1rem; */
+  margin: 1rem;
+  height: 2rem;
 }
 
 .recipe button {
@@ -156,4 +170,15 @@ h1 {
 .ingredient-weight {
   color: #40b48e;
   font-size: 1.3rem;
+}
+@media (max-width: 420px) {
+  h1 {
+    font-size: 4rem;
+  }
+}
+@media (max-width: 420px) {
+  .search-form {
+    width: 32rem;
+    height: 7rem;
+  }
 }
